--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: deploy react app 
+name: deploy react app
 on: push
 permissions:
   contents: write
@@ -6,21 +6,22 @@ jobs:
   deploy-react-app:
     runs-on: ubuntu-latest
     steps:
-      - name: clone the repository
+      - name: clone-repository
         uses: actions/checkout@v4
-        
+
       - name: install npm packages
         run: npm install
-        
-      - name: run npm
+
+      - name: npm run build
+        env:
+          NODE_OPTIONS: --openssl-legacy-provider
         run: npm run build
-        
-      - name: test npm
-        run: npm run test
-        
+
+      - name: test the application
+        run: npm run test -- --passWithNoTests
+
       - name: deploy to github pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
-      
+          publish_dir: ./build
